# labeling-ocr-packaged

./: README.md
docs/: EXPERIMENT_WORKFLOW.md  README.md  index.html  task1_craft_experiment.md  task2_color_splitting.md  task3_vlm_validation.md  task4_react_frontend.md
docs/results/baseline/: results.json
docs/results/char_detection/: results.json
docs/results/craft/: results.json
docs/results/rapidocr/: results.json
docs/sandbox/task1/: comparison.md
docs/sandbox/task1/baseline/: summary.json
docs/sandbox/task1/line_crops/: summary.json
docs/sandbox/task1/line_crops/pic1/: detection_result.json
docs/sandbox/task1/line_crops/pic2/: detection_result.json
docs/sandbox/task1/line_crops/pic3/: detection_result.json
docs/sandbox/task1/line_crops/pic4/: detection_result.json
docs/sandbox/task1/rapidocr/: pic1_results.json  pic2_results.json  pic3_results.json  pic4_results.json  summary.json
docs/sandbox/task1/rapidocr_char/: box_0000_results.json  summary.json
docs/sandbox/task1/rapidocr_det_only/: box_0000_results.json  summary.json
docs/sandbox/task2/: ground_truth_comparison.json
docs/sandbox/task2/random_sample/: box_0000_results.json  box_0002_results.json  box_0007_results.json  box_0009_results.json  box_0010_results.json  box_0018_results.json  box_0021_results.json  box_0027_results.json  box_0037_results.json  summary.json
lib/: pyproject.toml
lib/research_utils/geometry/: __init__.py
lib/research_utils/html/: __init__.py
lib/research_utils/ocr/: __init__.py
prompts/: PROMPTS.md
specs/: SPEC.md
